# rtxrmq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
common/: Rapl.cpp  Rapl.h  nvmlPower.cpp  nvmlPower.hpp
csv-finales/: hmap-A100-ALG7.csv  hmap-RTX3090Ti-ALG3.csv  hmap-RTX3090Ti-ALG7.csv  hmap-RTX4090-ALG7.csv  hmap-THREADRIPPER-5975WX-ALG1.csv  hmap-TITANRTX-ALG3.csv  hmap-TITANRTX-ALG5.csv  hmap-TITANRTX-ALG7.csv  hmap-TRPRO-5975WX-ALG1.csv  perf-A100-ALG5.csv  perf-A100-constBS-ALG5.csv  perf-A100-constNB-ALG5.csv  perf-RTX3090Ti-ALG3.csv  perf-RTX3090Ti-ALG5.csv  perf-RTX3090Ti-ALG7.csv  perf-RTX3090Ti-constBS-ALG5.csv  perf-RTX3090Ti-constNB-ALG5.csv  perf-RTX4090-ALG5.csv  perf-RTX4090-ALG7.csv  perf-RTX4090-constBS-ALG5.csv  perf-RTX4090-constNB-ALG5.csv  perf-THREADRIPPER-5975WX-ALG1.csv  perf-TITANRTX-ALG3.csv  perf-TITANRTX-ALG7.csv  perf-TRPRO-5975WX-ALG1.csv
csv-to-plot/: hmap-2X-EPYC9654-192C-ALG1.csv  hmap-2X-EPYC9654-96C-ALG1.csv  hmap-A100-ALG3.csv  hmap-A100-ALG7.csv  hmap-RTX3090Ti-ALG3.csv  hmap-RTX3090Ti-ALG7.csv  hmap-RTX4090-ALG3.csv  hmap-RTX4090-ALG7.csv  hmap-RTX6000ADA-ALG2.csv  hmap-RTX6000ADA-ALG7.csv  hmap-TITANRTX-ALG3.csv  hmap-TITANRTX-ALG5.csv  hmap-TITANRTX-ALG7.csv  hmap-TRPRO-5975WX-ALG1.csv  perf-2X-EPYC9654-96C-ALG1.csv  perf-A100-ALG3.csv  perf-A100-ALG7.csv  perf-A100-constNB-ALG5.csv  perf-RTX3090Ti-ALG3.csv  perf-RTX3090Ti-ALG5.csv  perf-RTX3090Ti-ALG7.csv  perf-RTX3090Ti-constBS-ALG5.csv  perf-RTX3090Ti-constNB-ALG5.csv  perf-RTX4090-ALG3.csv  perf-RTX4090-ALG5.csv  perf-RTX4090-ALG7.csv  perf-RTX4090-constBS-ALG5.csv  perf-RTX4090-constNB-ALG5.csv  perf-RTX6000ADA-ALG2.csv  perf-RTX6000ADA-ALG5.csv  perf-RTX6000ADA-ALG7.csv  perf-RTX6000ADA-ALG8.csv  perf-TITANRTX-ALG3.csv  perf-TITANRTX-ALG5.csv  perf-TITANRTX-ALG7.csv  perf-TITANRTX-constBS-ALG5.csv  perf-TITANRTX-constNB-ALG5.csv  perf-TRPRO-5975WX-ALG1.csv  perfexp-2X-EPYC9654-96C-ALG1.csv  perfexp-2X-EPYC9654-96C-QPERF-ALG1.csv  (+55 more)
data/: data.csv
hrmq/: .gitignore  Makefile  RMQRMM64.cpp  readme.txt
results/: data.csv
scripts/: 3090Ti-perf-benchmark.sh  :w  RTX4090-perf-fulltest.sh  benchmark-heatmap.sh  benchmark-plots.sh  benchmark.sh  gen-all-heatmaps.sh  gen-all-perf.sh  gen-all-perfexp.sh  gen-all-power-scaling.sh  gen-all-power.sh  gen-all-qperfexp.sh  gen-all.sh  gen3Ddata.py  hmap-benchmark.sh  hmap-fulltest.sh  perf-benchmark-exp.sh  perf-benchmark.sh  perf-fulltest-exp.sh  perf-fulltest.sh  plot3dCube.py  plot_best_heatmap_from_3D.py  plot_perf  (+13 more)
(+23 files in other folders)
